[package]
name = "libp2p-request-response"
edition = "2018"
description = "Generic Request/Response Protocols"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-trait = "0.1"
futures = "0.3.1"
libp2p-core = "0.20"
libp2p-swarm = "0.20"
smallvec = "1.4"
wasm-timer = "0.2"
async-std = { version = "1.6.2", features = ["unstable"] }

[dev-dependencies]
libp2p-noise = "0.20"
libp2p-tcp = { version = "0.20", features = ["async-std"] }
libp2p-yamux = "0.20"
rand = "0.7"
